@@ -1,3 +1,8 @@
+2004-01-24  Werner Koch  <wk@gnupg.org>
+
+	* assuan-pipe-connect.c (assuan_pipe_connect2): New as an
+	extension of assuan_pipe_connect. Made the latter call this one.
+
 2004-01-14  Werner Koch  <wk@gnupg.org>
 
 	* assuan-buffer.c (_assuan_cookie_write_data): Return the
